# dnaerys-python

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: annotations.rst  api.rst  caveats.rst  changelog.rst  conf.py  connection.rst  errors.rst  index.rst  installation.rst  pagination.rst  quickstart.rst
proto/: dnaerys.proto
src/dnaerys/: __init__.py  _channel.py  _client.py  _convert.py  _dispatch.py  _enums.py  _exceptions.py  _pagination.py  _stream.py  _types.py
src/dnaerys/_proto/: dnaerys_pb2.py  dnaerys_pb2.pyi  dnaerys_pb2_grpc.py
tests/: conftest.py  test_client_integration.py  test_convert.py  test_dispatch.py  test_e2e.py  test_enums.py  test_exceptions.py  test_limit_pagination_completeness.py  test_paginate_integration.py  test_pagination.py  test_proto_coverage.py  test_public_api.py  test_stream.py  test_thread_safety.py  test_types.py
